2009-12-04  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Remove suppress highlight when restoring selected node.

        https://bugs.webkit.org/show_bug.cgi?id=32152

        * inspector/front-end/ElementsPanel.js:
        (WebInspector.ElementsPanel.prototype.setDocument.selectNode):
        (WebInspector.ElementsPanel.prototype.setDocument.selectLastSelectedNode):
        (WebInspector.ElementsPanel.prototype.setDocument):

2009-12-04  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Gradient SVG animation demonstrates tearing at animation extremes
        https://bugs.webkit.org/show_bug.cgi?id=11929

        The focalPoint of a radial gradient is temporarly substracted by
        the centralPoint, if the focalPoint is not in the radius of the
        gradient. This is needed to calculate a new postion of the focalPoint
        according to the specification. But the new focalPoint needs to be
        moved by the centralPoint after this calculation, which is not the case
        at the moment. This patch fixes this issue. It was also introduced a
        deviation of maximal 0.2% for Cairo to get around the fixed point numbers
        in Cairo.

        W3C-SVG-1.1/pservers-grad-13-b needed an update. The missing adjustment
        of the new focalPoint caused wrong results for the last three tests.

        Test: svg/custom/radial-gradient-with-outstanding-focalPoint.svg

        * svg/SVGRadialGradientElement.cpp:
        (WebCore::SVGRadialGradientElement::buildGradient):

2009-12-04  Anton Muhin  <antonm@chromium.org>

        Reviewed by Dmitry Titov.

        Do not use WebCore::String::String(const UChar*, int length) to convert
        short v8 strings.

        Plus added string traits.
        https://bugs.webkit.org/show_bug.cgi?id=31415

        * bindings/v8/V8Binding.cpp:
        (WebCore::):
        (WebCore::v8StringToWebCoreString):
